# libsocketcangw

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac  libsocketcangw.pc.in
include/: libsocketcangw.h
src/: Makefile.am  libsocketcangw.c  libsocketcangw.sym
test/: Makefile.am  gwtest.c  run-test.sh
tools/: check-codingstyle.sh  check-complexity.sh  do-reformat-codingstyle.sh
